# character-generator

./: README.md  __main__.py  pyproject.toml
db/: character_definition.yaml  db.yaml
src/: __init__.py  character_database.py  character_definition.py  character_generator.py
src/parsers/: __init__.py  db_parser.py  definition_parser.py  yaml_tags.py
